--- a/Assignment2/Ass2-template.Rmd
+++ b/Assignment2/Ass2-template.Rmd
@@ -293,19 +293,75 @@ $$
 ## Q 9{.tabset}
 
 ### a
+Given that $70\%$ of graduate students who earn PhD s in the U.S. are foreign nationals. Consider the number *Y* of foreign students in a sample of 25 students who just received their PhD.
+$$
+\begin{align*}
+P(Y=10) = 0.001324897
+\end{align*}
+$$
+```{r}
+dbinom(10,25,0.70)
+```
 
 
 ### b
-
+$$
+\begin{align*}
+P(Y\leq 5) = 3.457444e^{-7}
+\end{align*}
+$$
+```{r}
+pbinom(5,25,.7)
+```
 
 ### c
+For $p=0.70$, $q=0.30$, and $n=25$; we find that the mean is $\mu=np$ & the standard deviation is $\sigma = npq$.
+$$
+\begin{align*}
+\mu = 17.5\\
+\sigma = 5.25
+\end{align*}
+$$
+```{r}
+25*.7
+25*.7*.3
+```
+
 
 
 ### d
+Here we see that 17.5, or roughly 18, foreign students earn their PhD out of 25 total students in the U.S., with a standard deviation of 5.25 of the mean.  
 
 
 
 ## Q 10{.tabset}
+Assuming that their are 10 train tracks, ways of assignment, and 50 trains, **N**, that need to be assign to each track:
+
+
+### a 
+The probability that 5 trains will be assigned to the same track is $p = 4.912046e-07$ or approximately $0.0000004912$. 
+$$
+\begin{align*}
+p =& \frac{\frac{N!}{n_1!n_2!....n_{10}!}}{10^{50}}\\
+p =& \frac{50!}{5!\cdot5!\cdot5!\cdot5!\cdot5!\cdot5!\cdot5!\cdot5!\cdot5!\cdot5!}\\
+
+\end{align*}
+$$
+```{r}
+factorial(50)/(factorial(5)*factorial(5)*factorial(5)*factorial(5)*factorial(5)*factorial(5)*factorial(5)*factorial(5)*factorial(5)*factorial(5))/(10^(50))
+```
+
+### b
+to fins out if **track 1** is underutilized, we examine the probability of track assignment; $prob = \frac{1}{10} = 0.1$. The probability that 2 or fewer trains are assigned is $P(Y<2)$ which is:
+```{r}
+pbinom(1,50,.1)
+```
+or 
+$$
+\begin{align*}
+P(Y<2) = 0.03378586
+\end{align*}
+$$
 
 
 ## Q 11{.tabset}
