--- a/Exam.Rmd
+++ b/Exam.Rmd
@@ -63,3 +63,67 @@ boxplot(mpg,main="Miles Per Gallon: Task 4 Outlier identification",ylab="mpg",co
 ```
 
 
+
+
+
+```{r}
+epagas <- read.csv("EPAGAS.csv")
+mpg <- epagas$MPG
+
+z <- (mpg-mean(mpg))/sd(mpg)
+mean(z)
+sd(z)^2
+# Find the z values greater than 3 in size
+z[abs(z)>3]
+
+# Find the I values corresponding to these z values
+mpg[abs(z)>3]
+
+# Find the values of z that are possible outliers
+z[abs(z)>=2 & abs(z)<=3]
+
+#Find the values of I which are possible outliers
+mpg[abs(z)>=2 & abs(z)<=3]
+
+boxplot(mpg,main="Miles Per Gallon: Task 4 Outlier identification",ylab="mpg",col="Blue",notch=TRUE)
+```
+
+
+```{r}
+length(mpg[abs(z)<3])/length(mpg)
+
+length(mpg[abs(z)<1])/length(mpg)
+summary(mpg[abs(z)<1])
+```
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
