--- a/LAB6/LAB6.Rmd
+++ b/LAB6/LAB6.Rmd
@@ -17,13 +17,16 @@ knitr::opts_chunk$set(echo = TRUE)
 ```
 
 
-# Task 1
+## Task 1
 ```{r}
 getwd()
 ```
 
 
-# Task 2
+## Task 2 {.tabset}
+
+### 4 Normal Curves
+
 ```{r}
 # Sets Layout for 4 graphs 2 on top 2 on bottom
 layout(matrix(1:4, nr=2,nc=2))
@@ -31,27 +34,139 @@ layout(matrix(1:4, nr=2,nc=2))
 curve(dnorm(x, mean=10,sd=4),xlim=c(-6,25),ylab = "sd=4")
 curve(dnorm(x, mean=10,sd=2),xlim=c(2,17),ylab = "sd=2")
 curve(dnorm(x, mean=5,sd=10),xlim=c(-30,40),ylab = "sd=10")
-curve(dnorm(x, mean=5,sd=1/2),xlim=c(3,7),ylab = "sd=1/2")
+curve(dnorm(x, mean=5,sd=0.5),xlim=c(3,7),ylab = "sd=0.5")
+```
+
+
+
+### Normal mean = 0 & sd = 1
+
+The following graph was made with the LAB6.R and ran out of R markdown to use the locator function for the final graph:
+```{r eval=FALSE}
+curve(dnorm(x, mean=0,sd=1),xlim=c(-3,3),ylab = "sd=1")
+# In order to find the area between x=10 and 25
+#  - seq defines desired x points
+xcurve=seq(2,5,length=1000)
+# For The Y part of the curve  we use the X points
+#  and the data for the curve in a normal distribution
+ycurve=dnorm(xcurve,mean=0,sd=1)
+# Creates a Polygon and fills it bounded by the given
+#   x & y curves
+polygon(c(2,xcurve,5),c(0,ycurve,0),col="Red")
+# Put in the text with the appropriate area
+# Area
+area=pnorm(5,mean=0,sd=1)-pnorm(2,mean=0,sd=1)
+area=round(area,4)
+# Click to paste the text onto the graph
+text(locator(1), paste("Area = ", area, sep=""))
+```
+
+
+```{r}
+knitr::include_graphics("T2.1.png")
+```
+
+
+###  Normal mean = 4 & sd = 2
+The following graph was made with the LAB6.R and ran out of R markdown to use the locator function for the final graph:
+```{r eval=FALSE}
+curve(dnorm(x, mean=4,sd=2),xlim=c(-10,10),ylab = "sd=2")
+# In order to find the area between x=10 and 25
+#  - seq defines desired x points
+xcurve=seq(1,5,length=1000)
+# For The Y part of the curve  we use the X points
+#  and the data for the curve in a normal distribution
+ycurve=dnorm(xcurve,mean=4,sd=2)
+# Creates a Polygon and fills it bounded by the given
+#   x & y curves
+polygon(c(1,xcurve,5),c(0,ycurve,0),col="green")
+# Put in the text with the appropriate area
+# Area
+prob=pnorm(5,mean=4,sd=2)-pnorm(1,mean=4,sd=2)
+prob=round(prob,4)
+# Click to paste the text onto the graph
+text(locator(1), paste("Area = ", prob, sep=""))
 ```
 
 ```{r}
+knitr::include_graphics("T2.2.png")
+```
 
+
+
+###  Normal mean = 10 & sd = 4
+The following graph was made with the LAB6.R and ran out of R markdown to use the locator function for the final graph:
+```{r eval=FALSE}
 
 ```
 
-# Task 3
+
+```{r}
+knitr::include_graphics("Rplot.mean4.sd.2.png")
+```
 
 
-# Task 4
+
+###  Normal mean = -2 & sd = 1/2
+The following graph was made with the LAB6.R and ran out of R markdown to use the locator function for the final graph:
+```{r eval=FALSE}
+
+```
+
+```{r}
+knitr::include_graphics("Rplot.mea-2.png")
+```
 
 
-# Task 5 
 
 
-# Task 6 
+## Task 3
+The following graphs were made with the script the commented version of lab6.R:
+
+### 1st Gamma Distribution set
+
+```{r}
+knitr::include_graphics("T3Gamma.png")
+```
 
 
-# Task 7
+### 2nd Gamma Distribution set
+```{r}
+knitr::include_graphics("T3G2.png")
+```
+
+
+
+## Task 4
+
+### 4 plots in layout()
+```{r}
+# Chi -sq ### alpha = df/2, beta=2
+layout(matrix(1:4, nr=2,nc=2))
+# Curve Based off Chi-Square distribution
+curve(dchisq(x,df=1),xlim=c(-1,10),ylim=c(0,1),col="Red",lwd=2,ylab="Chisq density", main="df=1")
+curve(dchisq(x,df=2),xlim=c(-1,10),ylim=c(0,1),col="Blue",lwd=2,ylab="Chisq density",main="df=2")
+curve(dchisq(x,df=4),xlim=c(-1,10),ylim=c(0,1),col="Green",lwd=2,ylab="Chisq density", main="df=4")
+curve(dchisq(x,df=20),xlim=c(0,40),ylim=c(0,1),col="Purple",lwd=2,ylab="Chisq density",main="df=20")
+```
+
+### 3 plots in layout() and probabilities
+```{r}
+layout(matrix(1:3, nr=1,nc=3))
+curve(pchisq(x,df=2),xlim=c(-1,20),ylim=c(0,1),col="Blue",lwd=2,ylab="Chisq density",main="df=2")
+curve(pchisq(x,df=3),xlim=c(-1,20),ylim=c(0,1),col="Green",lwd=2,ylab="Chisq density", main="df=4")
+curve(pchisq(x,df=20),xlim=c(0,80),ylim=c(0,1),col="Purple",lwd=2,ylab="Chisq density",main="df=20")
+
+```
+
+
+## Task 5 
+
+
+## Task 6 
+
+
+## Task 7
 
 
 
