--- a/In Class/Ttfunction.LAB7.Rmd
+++ b/In Class/Ttfunction.LAB7.Rmd
@@ -26,5 +26,18 @@ t.test(y1,y2,mu = 0,var.equal=TRUE)$conf.int
 #  - packages the confidence interval
 var.test(y1,y2)
 
+
+# T value for confidence level (another way)
+t.test(y1)$conf.int
+
+
+# using R as  calcualator
+alpha <- 0.05
+n <- length(y1)
+t <- qt(1-alpha/2,n-1)
+mp <- c(-1,1)
+
+mean(y1) + mp*t*sd(y1)/sqrt(n)
+
 ```
 
