--- a/In Class/Ttfunction.LAB7.Rmd
+++ b/In Class/Ttfunction.LAB7.Rmd
@@ -41,3 +41,46 @@ mean(y1) + mp*t*sd(y1)/sqrt(n)
 
 ```
 
+
+
+```{r}
+y1 <- rnorm(3,4,5)
+
+# T value for confidence level (another way)
+t.test(y1)$conf.int
+
+
+# using R as  calcualator
+alpha <- 0.05
+n <- length(y1)
+t <- qt(1-alpha/2,n-1)
+mp <- c(-1,1)
+
+mean(y1) + mp*t*sd(y1)/sqrt(n)
+
+```
+
+```{r}
+ read.csv(file.choose())-> data
+data$REAC.R
+t.test(data$REAC.R,data$REAC.U)$conf
+
+# using R as  calcualator
+t.test(data$REAC.R,data$REAC.U,mu = 0,var.equal=TRUE)$conf.int
+
+
+read.csv(file.choose())-> data
+data$REAC.R
+t.test(data$REAC.R,data$REAC.U, paired = FALSE)$conf
+```
+
+```{r}
+library(dplyr)
+
+read.csv(file.choose())-> data
+data %>% mutate(difference = REAC.R-REAC.U) -> data2
+t.test(data2$difference)$conf
+
+t.test(data$REAC.R,data$REAC.U, paired =TRUE)$conf
+```
+
