class almost over :)

--- a/In Class/Null.Hypothesis.Rmd
+++ b/In Class/Null.Hypothesis.Rmd
@@ -1,3 +1,23 @@
+---
+title: 'Null Hypothesis'
+author: "Evan Blosser"
+date: '`r format(Sys.Date(),format="%A, %B %d, %Y")`'
+output: 
+  html_document:
+    df_print: paged
+    fig_caption: true
+    highlights: pygments
+    number_sections: no
+    theme: spacelab
+    toc: yes
+    toc_float: yes
+---
+
+```{r setup, include=FALSE, fig.align='center'}
+knitr::opts_chunk$set(echo = TRUE)
+```
+
+
 ```{r}
 # NV = 1/2
 
@@ -24,4 +44,20 @@ t.test(L,mu=42)
 ```{r}
 t.test(L,mu=45)
 ```
+# T calc more...
+```{r}
+set.seed(34)
+y1 <- rnorm(40,21,10)
+y2 <- rnorm(40,18,10)
+
+t.test(y1,y2, mu=0, var.equal = TRUE)
+
+qt(1-0.05/2, 68)
+```
+
+
+```{r}
+
+```
+
 
