--- a/PROJECT/project.Rmd
+++ b/PROJECT/project.Rmd
@@ -41,17 +41,20 @@ ntickets <- function(N, gamma, p) {
 
   # Find the number of tickets using the discrete distribution
   nd_opt <- stats::optimize(function(n) abs(objective_function_discrete(n)), interval = c(0, N))$minimum
-  nd <- round(nd_opt)
+  # Round The output
+  nd <- round(nd_opt,2)
 
   # Find the number of tickets using the normal approximation
   nc_opt <- stats::optimize(function(n) abs(objective_function_continuous(n)), interval = c(0, N))$minimum
-  nc <- round(nc_opt)
+  # Round The output
+  nc <- round(nc_opt,2)
 
   # Create the objective function for the discrete case
   objective_values_discrete <- sapply(0:N, objective_function_discrete)
 
   # Create the objective function for the continuous case
   objective_values_continuous <- sapply(0:N, objective_function_continuous)
+  # Plot Layout 
   graphics::layout(matrix(1:2))
   # Plot objective function for the discrete case
   plot(0:N, objective_values_discrete, type = "b", col = "blue",
@@ -73,4 +76,13 @@ ntickets <- function(N, gamma, p) {
 ```{r}
 MATH4753EvanB::ntickets(N=400,gamma = 0.02, p = 0.95)
 ```
+
+
+# Package Build Check:
+
+
+0 errors ✔ | 0 warnings ✔ | 2 notes ✖
+
+R CMD check succeeded
+
 
